--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_drop_cap_text: ^1.0.1
   bloc: ^9.2.0
   flutter_bloc: ^9.1.1
+  uuid: ^4.5.2
+  localstorage: ^6.0.0
 
 
 dev_dependencies:
