--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   collection: ^1.19.1
   flutter_nameday_api:
     path: ../../flutter_nameday_package
+  internet_connection_checker_plus: ^2.9.1+2
+  marqueer: ^2.4.3
     # git:
     #   url: https://github.com/comancheo/flutter_nameday_package.git
 
