change app icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,11 +55,10 @@ dependencies:
   localstorage: ^6.0.0
   collection: ^1.19.1
   flutter_nameday_api:
-    path: ../../flutter_nameday_package
+    git:
+      url: https://github.com/comancheo/flutter_nameday_package.git
   internet_connection_checker_plus: ^2.9.1+2
   marqueer: ^2.4.3
-    # git:
-    #   url: https://github.com/comancheo/flutter_nameday_package.git
 
 
 dev_dependencies:
